--- a/html/edit-buisiness.html
+++ b/html/edit-buisiness.html
@@ -20,6 +20,12 @@
 </head>
 
 <body>
+        <!--message box-->
+        <div id="message" class="message opacity-75">
+            <span id="messageText"></span>
+        </div>
+     <!--message box-->
+    
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <!-- Container wrapper -->
@@ -205,13 +211,64 @@
     <div class="container py-5 my-2 bg-light">
         <div class="mb-5 d-flex justify-content-between">
          
-            <div class="border border-danger shadow p-3 mb-5 bg-body rounded" style="width: 300px; border-radius: 10px;">
-                <img src="https://i.pinimg.com/originals/9b/22/de/9b22ded95ac198d43d2fa1f1cf88970f.png" class="img-fluid hover-shadow"
-                    alt="Los Angeles Skyscrapers" style="height: 100%; border-radius: 10px;"/>
-            </div>
+            <div class="d-flex flex-column flex-shrink-0 p-3 bg-white border border-danger shadow"
+            style="width: 280px; border-radius: 5px;">
+            <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
+                <svg class="bi me-2" width="40" height="32">
+                    <use xlink:href="#bootstrap"></use>
+                </svg>
+                <span class="fs-4">Dasboard</span>
+            </a>
+            <hr>
+            <ul class="nav nav-pills flex-column mb-auto">
+                <li class="nav-item ">
+                    <a href="http://127.0.0.1:5500/html/dasboard.html" class="nav-link active" aria-current="page">
+                        <svg class="bi me-2" width="16" height="16">
+                            <use xlink:href="#home"></use>
+                        </svg>
+                        Buisiness
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="nav-link link-dark bg-white ">
+                        <svg class="bi me-2" width="16" height="16">
+                            <use xlink:href="#speedometer2"></use>
+                        </svg>
+                        Dashboard
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="nav-link link-dark bg-white">
+                        <svg class="bi me-2" width="16" height="16">
+                            <use xlink:href="#table"></use>
+                        </svg>
+                        Orders
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="nav-link link-dark bg-white">
+                        <svg class="bi me-2" width="16" height="16">
+                            <use xlink:href="#grid"></use>
+                        </svg>
+                        Products
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="nav-link link-dark bg-white">
+                        <svg class="bi me-2" width="16" height="16">
+                            <use xlink:href="#people-circle"></use>
+                        </svg>
+                        Customers
+                    </a>
+                </li>
+            </ul>
+            <hr>
+            <div class="my-3"></div>
+        </div>
             <div class="col-9 bg-white p-4 shadow border-danger border" style="border-radius: 5px;">
-                <h3 class="text-center mb-5">REGISTER BUISINESS</h3>
+                <h3 class="text-center mb-5">EDIT BUISINESS</h3>
                 <form>
+                    <input type="text" id="idBuisiness" hidden>
                     <!-- Name input -->
                     <div class="form-outline">
                         <input type="text" id="registerName" class="form-control mb-0" data-mdb-showcounter="true"
@@ -443,7 +500,7 @@
     </footer>
     <!-- Footer -->
     <script type="module" src="../js/home.js"></script>
-    <script type="module" src="../js/register-buisiness.js">    </script>
+    <script type="module" src="../js/edit.buisiness.js">    </script>
     <script>
         function getValue(idSelectInput, idOptionValue, value, idSelectInputNext) {
             $(idSelectInput).val(value);
