--- a/html/home.html
+++ b/html/home.html
@@ -92,7 +92,7 @@
                             </li>
                             <li>
                                 <a class="dropdown-item" href="#" id="btnRegisterABusiness">Register a business</a>
-                                <a class="dropdown-item" href="#" id="btnBusinessManagement">Business management</a>
+                                <a class="dropdown-item" href="http://127.0.0.1:5500/html/dasboard.html" id="btnBusinessManagement">Business management</a>
                             </li>
                             <li>
                                 <a class="dropdown-item" href="#">Logout</a>
