--- a/html/register-pitch.html
+++ b/html/register-pitch.html
@@ -214,7 +214,7 @@
                 <hr>
                 <ul class="nav nav-pills flex-column mb-auto">
                     <li class="nav-item ">
-                        <a href="http://127.0.0.1:5500/html/dasboard.html" class="nav-link active" aria-current="page">
+                        <a href="http://127.0.0.1:5500/html/dasboard.html" class="nav-link link-dark bg-white " aria-current="page">
                             <svg class="bi me-2" width="16" height="16">
                                 <use xlink:href="#home"></use>
                             </svg>
@@ -222,7 +222,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="http://127.0.0.1:5500/html/pitch.html" class="nav-link link-dark bg-white ">
+                        <a href="http://127.0.0.1:5500/html/pitch.html" class="nav-link active">
                             <svg class="bi me-2" width="16" height="16">
                                 <use xlink:href="#speedometer2"></use>
                             </svg>
