--- a/html/home.html
+++ b/html/home.html
@@ -58,7 +58,7 @@
                     </button>
 
                 </div>
-                <div class="d-flex align-items-center hiddenBox" id="userLogin" >
+                <div class="d-flex align-items-center hiddenBox" id="userLogin">
                     <!-- Notifications -->
                     <div class="dropdown">
                         <a class="text-reset me-3 dropdown-toggle hidden-arrow" href="#" id="navbarDropdownMenuLink"
@@ -92,7 +92,8 @@
                             </li>
                             <li>
                                 <a class="dropdown-item" href="#" id="btnRegisterABusiness">Register a business</a>
-                                <a class="dropdown-item" href="http://127.0.0.1:5500/html/dasboard.html" id="btnBusinessManagement">Business management</a>
+                                <a class="dropdown-item" href="http://127.0.0.1:5500/html/dasboard.html"
+                                    id="btnBusinessManagement">Business management</a>
                             </li>
                             <li>
                                 <a class="dropdown-item" href="#">Logout</a>
@@ -107,95 +108,53 @@
     </nav>
     <!-- Navbar -->
 
-    <div class="container py-5 my-2 bg-light">
-        <div class="mb-5">
+    <div class="container py-5 my-2 bg-light" style="position: relative;">
+        <div class=" " style="position: absolute; top:4rem; right: 2rem; z-index: 1;">
+        <img src="../img/hiclipart.com.png" alt="" class="" style=" background: none !important;">
+        </div>
+        <div id="carouselExampleCaptions" class="carousel slide" data-mdb-ride="carousel">
+            <div class="carousel-indicators">
+              <button
+                type="button"
+                data-mdb-target="#carouselExampleCaptions"
+                data-mdb-slide-to="0"
+                class="active"
+                aria-current="true"
+                aria-label="Slide 1"
+              ></button>
+              <button
+                type="button"
+                data-mdb-target="#carouselExampleCaptions"
+                data-mdb-slide-to="1"
+                aria-label="Slide 2"
+              ></button>
+              <button
+                type="button"
+                data-mdb-target="#carouselExampleCaptions"
+                data-mdb-slide-to="2"
+                aria-label="Slide 3"
+              ></button>
+            </div>
+            <div class="carousel-inner rounded-5 shadow-4-strong" id="renderHomeNew">
+             
+            </div>
+            <button class="carousel-control-prev" type="button" data-mdb-target="#carouselExampleCaptions" data-mdb-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-mdb-target="#carouselExampleCaptions" data-mdb-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+
+        <div class="mb-5 mt-5">
             <div class="d-flex justify-content-between pb-2">
-                <h3 class="">OUTSTANDING POST BALL</h3>
+                <h3 class="">Buisiness Ball Like Top</h3>
                 <a class="hover-link" href="#">see all</a>
             </div>
 
-            <div class="d-flex justify-content-center row ">
-                <div class='col-3'>
-                    <div class='card' style='position: relative;'>
-                        <div class='like-box text-center'>
-                            <i class='fa-solid fa-heart'></i>
-                            <div>2000</div>
-                        </div>
-                        <div class='bg-image hover-overlay ripple' data-mdb-ripple-color='light'>
-                            <img src='https://mdbcdn.b-cdn.net/img/new/standard/nature/111.webp' class='img-fluid' />
-                            <a href='#!'>
-                                <div class='mask' style='background-color: rgba(251, 251, 251, 0.15);'></div>
-                            </a>
-                        </div>
-                        <div class='card-body'>
-                            <h5 class='card-title'>Card title</h5>
-                            <p class='card-text mb-1'>Some quick example text to build on the card title and make up the
-                                bulk
-                                of
-                                the card's content.</p>
-                            <div class='d-flex mb-2 hover-link '>
-                                <div class='' style='margin-right: 10px;'>20000</div>
-                                <div>View</div>
-                            </div>
-                            <a href='#!' class='btn btn-primary'>See</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class='col-3'>
-                    <div class='card' style='position: relative;'>
-                        <div class='like-box text-center'>
-                            <i class='fa-solid fa-heart'></i>
-                            <div>2000</div>
-                        </div>
-                        <div class='bg-image hover-overlay ripple' data-mdb-ripple-color='light'>
-                            <img src='https://mdbcdn.b-cdn.net/img/new/standard/nature/111.webp' class='img-fluid' />
-                            <a href='#!'>
-                                <div class='mask' style='background-color: rgba(251, 251, 251, 0.15);'></div>
-                            </a>
-                        </div>
-                        <div class='card-body'>
-                            <h5 class='card-title'>Card title</h5>
-                            <p class='card-text mb-1'>Some quick example text to build on the card title and make up the
-                                bulk
-                                of
-                                the card's content.</p>
-                            <div class='d-flex mb-2 hover-link '>
-                                <div class='' style='margin-right: 10px;'>20000</div>
-                                <div>View</div>
-                            </div>
-                            <a href='#!' class='btn btn-primary'>See</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class='col-3'>
-                    <div class='card' style='position: relative;'>
-                        <div class='like-box text-center'>
-                            <i class='fa-solid fa-heart'></i>
-                            <div>2000</div>
-                        </div>
-                        <div class='bg-image hover-overlay ripple' data-mdb-ripple-color='light'>
-                            <img src='https://mdbcdn.b-cdn.net/img/new/standard/nature/111.webp' class='img-fluid' />
-                            <a href='#!'>
-                                <div class='mask' style='background-color: rgba(251, 251, 251, 0.15);'></div>
-                            </a>
-                        </div>
-                        <div class='card-body'>
-                            <h5 class='card-title'>Card title</h5>
-                            <p class='card-text mb-1'>Some quick example text to build on the card title and make up the
-                                bulk
-                                of
-                                the card's content.</p>
-                            <div class='d-flex mb-2 hover-link '>
-                                <div class='' style='margin-right: 10px;'>20000</div>
-                                <div>View</div>
-                            </div>
-                            <a href='#!' class='btn btn-primary'>See</a>
-                        </div>
-                    </div>
-                </div>
-
+            <div class="d-flex justify-content-center row " id="renderHomeLike">
                 <div class='col-3'>
                     <div class='card' style='position: relative;'>
                         <div class='like-box text-center'>
@@ -225,6 +184,41 @@
             </div>
         </div>
 
+        <div class="mb-5">
+            <div class="d-flex justify-content-between pb-2">
+                <h3 class="">Buisiness Ball View Top</h3>
+                <a class="hover-link" href="#">see all</a>
+            </div>
+
+            <div class="d-flex justify-content-center row " id="renderHomeView">
+                <div class='col-3'>
+                    <div class='card' style='position: relative;'>
+                        <div class='like-box text-center'>
+                            <i class='fa-solid fa-heart'></i>
+                            <div>2000</div>
+                        </div>
+                        <div class='bg-image hover-overlay ripple' data-mdb-ripple-color='light'>
+                            <img src='https://mdbcdn.b-cdn.net/img/new/standard/nature/111.webp' class='img-fluid' />
+                            <a href='#!'>
+                                <div class='mask' style='background-color: rgba(251, 251, 251, 0.15);'></div>
+                            </a>
+                        </div>
+                        <div class='card-body'>
+                            <h5 class='card-title'>Card title</h5>
+                            <p class='card-text mb-1'>Some quick example text to build on the card title and make up the
+                                bulk
+                                of
+                                the card's content.</p>
+                            <div class='d-flex mb-2 hover-link '>
+                                <div class='' style='margin-right: 10px;'>20000</div>
+                                <div>View</div>
+                            </div>
+                            <a href='#!' class='btn btn-primary'>See</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- Footer -->
